# AP4A

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AP4A PROJET.7z  Boulet_Tp.cpp  Brightness.cpp  Brightness.hpp  CMakeCache.txt  CMakeLists.txt  CR_MunaAyuniBINTIMAHATHIR.docx  ClementBrichet_AP4A_gitcommands.txt  Datapacket.hpp  Git commands.docx  HELLOWORLD.cpp  Hello-World.cpp  HelloWorld.cpp  Hello_World.cpp  Helloworld.cpp  Humidity.cpp  Humidity.h  Humidity.hpp  Humidity.txt  Light  Light.cpp  Light.h  Light.hpp  Light.txt  Log_texte  Main.cpp  Mainf.cpp  Makefile.txt  Package.cpp  Package.hpp  Packet.cpp  Pression.cpp  Pression.h  Pression.hpp  Pression.txt  Pressure.cpp  Pressure.hpp  (+52 more)
AP4A - IotPlane/: CMakeCache.txt  CMakeLists.txt  IotPlane.cpp  Makefile  cmake_install.cmake
AP4A - IotPlane/Logs/: data.txt
AP4A - IotPlane/Scheduler/: Scheduler.cpp  Scheduler.hpp
AP4A - IotPlane/Sensor/: Sensor.cpp  Sensor.hpp
AP4A - IotPlane/Sensor/Humidity/: Humidity.cpp  Humidity.hpp
AP4A - IotPlane/Sensor/Light/: Light.cpp  Light.hpp
AP4A - IotPlane/Sensor/Pression/: Pression.cpp  Pression.hpp
AP4A - IotPlane/Sensor/Temperature/: Temperature.cpp  Temperature.hpp
AP4A - IotPlane/Serveur/: Serveur.cpp  Serveur.hpp
AP4A PROJET FINAL/: Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pressure.cpp  Pressure.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  main.cpp
AP4A_Intermediaire_SCHERRER_Guillaume/: AP4A_Intermediaire  AP4A_Intermediaire.cpp  AP4A_Intermediaire.hpp  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Makefile  Pressure.cpp  Pressure.hpp  ReadMe.txt.rtf  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  SensorLog.txt  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp
AP4A_LI_RENDUFINAL/: Humidity.txt  Light.txt  Pressure.txt  Temperature.txt
AP4A_Rendu_Final_Scherrer_Guillaume/: AP4A_Final  AP4A_Final.cpp  AP4A_Final.hpp  Humidite.txt  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Lumiere.txt  Makefile  Pression.txt  Pressure.cpp  Pressure.hpp  Readme.md  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  Temperature.txt
AP4A_TP_Final/: CMakeLists.txt  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pression.cpp  Pression.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  main.cpp
AP4A_TP_Intermediaire/: Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  dHumidity.txt  dLight.txt  dPression.txt  dTemperature.txt  main.cpp
C++Projet/: C++Projet.code-workspace  Humidity.cpp  Humidity.h  Light.cpp  Light.h  (+13 more)
ProjetSensor/: .gitignore  CMakeLists.txt
ProjetSensor/src/: HumiditySensor.cpp  HumiditySensor.hpp  LightSensor.cpp  LightSensor.hpp  PressureSensor.cpp  PressureSensor.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  StructSensorData.hpp  TemperatureSensor.cpp  TemperatureSensor.hpp  main.cpp
Projet_AP4A/: CMakeLists.txt  Capteurs.csv  Capteurs.txt  Main.cpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  main.cpp  scheduler.cpp  scheduler.hpp  sensor.cpp  sensor.hpp  server.cpp  server.hpp
Projet_AP4A/Projet_AP4A/: Scheduler.cpp  Sensor.cpp
Projet_AP4A/Scheduler/: Scheduler.cpp  Scheduler.hpp
Projet_AP4A/Sensor/: Sensor.cpp  Sensor.hpp
Projet_AP4A/Sensors/: Humidite.cpp  Humidite.hpp  Light.cpp  Light.hpp  Pression.cpp  Pression.hpp  Temperature.cpp  Temperature.hpp
Projet_AP4A/Server/: Logs.csv  Server.cpp  Server.hpp
Rendu_Final_Projet_AP4A/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Main.cpp  SimulationAvion.vcxproj.filters
Rendu_Final_Projet_AP4A/Scheduler/: Scheduler.cpp  Scheduler.hpp
Rendu_Final_Projet_AP4A/Sensor/: Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pression.cpp  Pression.hpp  Sensor.cpp  Sensor.hpp  Temperature.cpp  Temperature.hpp
Rendu_Final_Projet_AP4A/Server/: Logs.csv  Server.cpp
Rendu_Final_Projet_AP4A/SimulationAvion.dir/Debug/: SimulationAvion.exe.recipe  SimulationAvion.ilk
Rendu_Final_Projet_AP4A/SimulationAvion.dir/Debug/SimulationAvion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
Rendu_Final_Projet_AP4A/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
Rendu_Final_Projet_AP4A/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog
Rendu_Final_Projet_AP4A_CHOULOT_Hugo/Rendu_Final_Projet_AP4A_CHOULOT_Hugo_Linux/: CMakeCache.txt  CMakeLists.txt  Log_Humidity.csv  Log_Light.csv  Log_Pression.csv  Log_Temperature.csv  Main  Main.cpp  Makefile  Pression.hpp  Server.cpp  Server.hpp  Temperature.hpp  cmake_install.cmake
TMAYER - AP4A_TP - Rendu Final/: CMakeLists.txt  Data.hpp  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pressure.cpp  Pressure.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  main.cpp
projet/: CMakeLists.txt  Enum.h  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pression.cpp  Pression.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  logtempLog.txt  main.cpp  readMe.md  temp.txt
projet/Scheduler/: Scheduler.cpp  Scheduler.h
projet/Sensor/: Humidity.cpp  Humidity.h  Light.cpp  Light.h  Pression.cpp  Pression.h  Sensor.cpp  Sensor.h  Temperature.cpp  Temperature.h
projet/Server/: Server.cpp  Server.h
projet/log/: tempLog.txt
projet/sources/: enum.h
projet/sources/log/: humlog.txt  log.txt  lumlog.txt  prelog.txt  templog.txt
projet/sources/scheduler/: Time.cpp  Time.hpp  scheduler.cpp  scheduler.h
projet/sources/sensor/: humidity.cpp  humidity.h  light.cpp  light.h  pression.cpp  pression.h  sensor.cpp  sensor.h  temperature.cpp  temperature.h
projet/sources/server/: server.cpp  server.h
(+918 files in other folders)
